# EnumStrings

./: CMakeLists.txt  README.md  enum_strings.h  test.cpp
.github/workflows/: cmake.yml
